compiler/tests-spec/testData/codegen/box/templates/identifiers/packageSimple.kt
<!DIRECTIVES("HELPERS: REFLECT")!>

package <!ELEMENT(1)!>

fun box(): String? {
    if (!checkPackageName("<!ELEMENT_VALIDATION(1)!>.<!CLASS_OF_FILE!>", "<!ELEMENT_VALIDATION(1)!>")) return null

    return "OK"
}
